--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 # Python 3.2 not supported by Pip/Tox
-envlist = py{35,36}
+envlist = py{365}
 recreate = True
 
 [testenv:docs]
@@ -9,3 +9,9 @@ basepython = python3.6
 deps = sphinx >= 1.4.2, < 1.4.3
 commands = sphinx-build -b html source build
            python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "build" / "index.html"))'
+
+[testenv:docs]
+basepython = python3.6
+deps = 
+    -r{toxinidir}/dev_requirements.txt
+commands = python QtWekaWrapper\tests.py
