--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ deps = sphinx >= 1.4.2, < 1.4.3
 commands = sphinx-build -b html source build
            python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "build" / "index.html"))'
 
-[testenv:docs]
+[testenv:test]
 basepython = python3.6
 deps = 
     -r{toxinidir}/dev_requirements.txt
